@@ -126,6 +126,15 @@
 #address <host>[:<port>]
 #topic <topic> [out | in | both]
 
+# Set the clean session variable for this bridge.
+# When set to true, when the bridge disconnects for any reason, all messages
+# and subscriptions will be cleaned up on the remote broker. Note that with
+# cleansession set to true, there may be a significant amount of retained
+# messages sent when the bridge reconnects after losing its connection.
+# When set to false, the subscriptions and messages are kept on the remote
+# broker, and delivered when the bridge reconnects.
+#cleansession false
+
 # ======================================================================
 # Extensions
 # ======================================================================
@@ -149,7 +158,6 @@
 #retained_persistence
 #trace_level
 #addresses
-#cleansession
 #idle_timeout
 #keepalive_interval
 #notifications
